# nocd

./: .gitignore  README.md  myst.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
checkpoints/: nocd-gcn-X.json  nocd-gcn-X.pt  nocd-gcn-spectral-k32-mag_med.json  nocd-gcn-spectral-k32-mag_med.pt  nocd-gcn-spectral-k32.json  nocd-gcn-spectral-k32.pt  nocd-gcn-structural-mag_med.json  nocd-gcn-structural-mag_med.pt  nocd-gcn-structural.json  nocd-gcn-structural.pt  nocd-improved-X.json  nocd-improved-spectral-k32.json  nocd-improved-spectral-k32.pt  nocd-improved-structural.json  nocd-improved-structural.pt  nocd_model.pt
docs/: features_demo.ipynb  intro.md  original_demo.ipynb
nocd/: __init__.py  cli.py  data.py  features.py  model.py  sampler.py  utils.py
nocd/metrics/: unsupervised.py
nocd/nn/: __init__.py  decoder.py  gat.py  gcn.py  imrpoved_gcn.py
scripts/: train_all_checkpoints.py
