[project]
name = "nocd"
version = "0.2.0"
description = "Overlapping community detection with GNNs (modernized)"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.6",
    "torch-geometric>=2.6",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.scripts]
nocd-train = "nocd.cli:train_main"
nocd-predict = "nocd.cli:predict_main"
nocd-visualize = "nocd.cli:visualize_main"

[tool.setuptools.packages.find]
include = ["nocd*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
